--- a/src/main/resources/data/brass_geodes/loot_tables/blocks/sapphire_cluster.json
+++ b/src/main/resources/data/brass_geodes/loot_tables/blocks/sapphire_cluster.json
@@ -2,14 +2,15 @@
   "type": "minecraft:block",
   "pools": [
     {
-      "rolls": 1.0,
-      "bonus_rolls": 0.0,
+      "rolls": 1,
+      "bonus_rolls": 0,
       "entries": [
         {
           "type": "minecraft:alternatives",
           "children": [
             {
               "type": "minecraft:item",
+              "name": "brass_geodes:sapphire_cluster",
               "conditions": [
                 {
                   "condition": "minecraft:match_tool",
@@ -18,55 +19,44 @@
                       {
                         "enchantment": "minecraft:silk_touch",
                         "levels": {
-                          "min": 1
+                          "min": 1,
+                          "max": 0
                         }
                       }
                     ]
                   }
                 }
-              ],
-              "name": "brass_geodes:sapphire_cluster"
+              ]
             },
             {
-              "type": "minecraft:alternatives",
-              "children": [
+              "type": "minecraft:item",
+              "name": "brass_geodes:sapphire",
+              "functions": [
                 {
-                  "type": "minecraft:item",
-                  "conditions": [
-                    {
-                      "condition": "minecraft:match_tool",
-                      "predicate": {
-                        "tag": "minecraft:cluster_max_harvestables"
-                      }
-                    }
-                  ],
-                  "functions": [
-                    {
-                      "function": "minecraft:set_count",
-                      "count": 4.0,
-                      "add": false
-                    },
-                    {
-                      "function": "minecraft:apply_bonus",
-                      "enchantment": "minecraft:fortune",
-                      "formula": "minecraft:ore_drops"
-                    }
-                  ],
-                  "name": "brass_geodes:sapphire"
+                  "function": "minecraft:set_count",
+                  "count": {
+                    "min": 1,
+                    "max": 2
+                  },
+                  "add": false
                 },
                 {
-                  "type": "minecraft:item",
-                  "functions": [
-                    {
-                      "function": "minecraft:set_count",
-                      "count": 2.0,
-                      "add": false
-                    },
-                    {
-                      "function": "minecraft:explosion_decay"
-                    }
-                  ],
-                  "name": "brass_geodes:sapphire"
+                  "function": "minecraft:apply_bonus",
+                  "enchantment": "minecraft:fortune",
+                  "formula": "minecraft:uniform_bonus_count",
+                  "parameters": {
+                    "bonusMultiplier": 1
+                  }
+                },
+                {
+                  "function": "minecraft:limit_count",
+                  "limit": {
+                    "min": 1,
+                    "max": 4
+                  }
+                },
+                {
+                  "function": "minecraft:explosion_decay"
                 }
               ]
             }
