--- a/build.gradle
+++ b/build.gradle
@@ -11,9 +11,9 @@ apply plugin: 'net.minecraftforge.gradle'
 // Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 apply plugin: 'eclipse'
 
-version = '0.5.0'
+version = 'v1.0.0'
 group = 'BrassAmber.com.brass_geodes' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = 'brass_geodes'
+archivesBaseName = 'brass_geodes_1.18.1'
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(17) // Mojang ships Java 8 to end users, so your mod should target Java 8.
 
@@ -95,7 +95,7 @@ dependencies {
     // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-    minecraft 'net.minecraftforge:forge:1.18.1-39.0.10'
+    minecraft 'net.minecraftforge:forge:1.18.1-39.0.17'
 
 
 }
