--- a/build.gradle
+++ b/build.gradle
@@ -8,10 +8,9 @@ buildscript {
     }
 }
 apply plugin: 'net.minecraftforge.gradle'
-// Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 apply plugin: 'eclipse'
 
-version = '1.0.5'
+version = '1.1.0'
 group = 'BrassAmber.com.brass_geodes' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'brass_geodes_1.18.1'
 
@@ -23,7 +22,7 @@ minecraft {
     // You must be aware of the Mojang license when using the 'official' mappings.
     // See more information here: https://github.com/MinecraftForge/MCPConfig/blob/master/Mojang.md
 
-    mappings channel: 'official', version: '1.18.1'
+    mappings channel: 'official', version: '1.18.2'
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
     
     accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
@@ -47,7 +46,7 @@ minecraft {
             property 'forge.logging.console.level', 'debug'
 
             mods {
-                bezoar {
+                brass_geodes {
                     source sourceSets.main
                 }
             }
@@ -61,7 +60,7 @@ minecraft {
             property 'forge.logging.console.level', 'debug'
 
             mods {
-                bezoar {
+                brass_geodes {
                     source sourceSets.main
                 }
             }
@@ -80,7 +79,7 @@ minecraft {
             args '--mod', 'brass_geodes', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
 
             mods {
-                bezoar {
+                brass_geodes {
                     source sourceSets.main
                 }
             }
@@ -95,7 +94,7 @@ dependencies {
     // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-    minecraft 'net.minecraftforge:forge:1.18.1-39.0.19'
+    minecraft 'net.minecraftforge:forge:1.18.2-40.1.0'
 
 
 }
