Add biome settings for all geodes.

--- a/src/main/resources/data/brass_geodes/forge/biome_modifier/add_sapphire_geode.json
+++ b/src/main/resources/data/brass_geodes/forge/biome_modifier/add_sapphire_geode.json
@@ -1,6 +1,6 @@
 {
   "type": "forge:add_features",
-  "biomes": "#minecraft:is_overworld",
+  "biomes": "#minecraft:has_structure/village_snowy",
   "features": "brass_geodes:sapphire_geode_placed",
   "step": "underground_ores"
 }
