--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,24 +1,22 @@
 # mandatory (#mandatory), optional (#optional).
 # The overall format is standard TOML format, v0.5.0.
 modLoader="javafml" #mandatory
-loaderVersion="[43,)"
-license="All rights reserved"
+loaderVersion="${loader_version_range}"
+license="${mod_license}"
 logoFile="ring_amethyst.png"
 issueTrackerURL="https://github.com/BrassAmber-Mods/Brass_Geodes/issues"
 [[mods]]
-    modId="brass_geodes"
-    version="${file.jarVersion}"
-    displayName="BrassGeodes"
+    modId="${mod_id}"
+    version="${mod_version}" #mandatory
+    displayName="${mod_name}" #mandatory
     displayURL="https://www.curseforge.com/minecraft/mc-mods/brassgeodes"
     credits="BrassMcrafty for all textures, Milamber for code"
-    authors="Milamber and BrassMcrafty"
-    description='''
-    A small mod that adds different gem geodes in all biomes instead of just amethyst geodes.
-    '''
+    authors="${mod_authors}" #optional
+    description='''${mod_description}'''
 
 [[dependencies.brass_geodes]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.19,1.20)"
+    versionRange="${minecraft_version_range}"
     ordering="NONE"
     side="BOTH"
