--- a/.gitignore
+++ b/.gitignore
@@ -20,9 +20,13 @@ build
 # other
 eclipse
 run
+run-data
+
+repo
 
 # Files from Forge MDK
 forge*changelog.txt
 
 logs/
 .DS_Store
+/src/generated/resources/.cache
