--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -3,17 +3,22 @@
 modLoader="javafml" #mandatory
 loaderVersion="${loader_version_range}"
 license="${mod_license}"
-logoFile="ring_amethyst.png"
 issueTrackerURL="https://github.com/BrassAmber-Mods/Brass_Geodes/issues"
 [[mods]]
     modId="${mod_id}"
     version="${mod_version}" #mandatory
     displayName="${mod_name}" #mandatory
     displayURL="https://www.curseforge.com/minecraft/mc-mods/brassgeodes"
+    logoFile="ring_amethyst.png"
     credits="BrassMcrafty for all textures, Milamber for code"
-    authors="${mod_authors}" #optional
+    authors="${mod_authors" #optional
     description='''${mod_description}'''
-
+[[dependencies.${mod_id}]]
+    modId="forge"
+    mandatory=true
+    versionRange="${forge_version_range}"
+    ordering="NONE"
+    side="BOTH"
 [[dependencies.brass_geodes]]
     modId="minecraft"
     mandatory=true
