--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -10,8 +10,8 @@ issueTrackerURL="https://github.com/BrassAmber-Mods/Brass_Geodes/issues"
     displayName="${mod_name}" #mandatory
     displayURL="https://www.curseforge.com/minecraft/mc-mods/brassgeodes"
     logoFile="ring_amethyst.png"
-    credits="BrassMcrafty for all textures, Milamber for code"
-    authors="${mod_authors" #optional
+    credits=" BrassMcrafty for all textures, Milamber for code"
+    authors="${mod_authors}" #optional
     description='''${mod_description}'''
 [[dependencies.${mod_id}]]
     modId="forge"
